# HPCGPT

./: .gitignore  CMakeLists.txt  README.md  perf_output.txt  requirments.txt
benchmark/: CMakeLists.txt  bench.cpp
src/: Model.cpp  PerfLogger.h  Tensor.cpp
tools/: function_profiler.py  move_records.sh  read_code_perf.py  read_perf.py
